--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,2 +1,11 @@
-logging.level.org.hibernate.SQL: DEBUG
-logging.level.org.hibernate.SQL.type.descriptor.sql.BasicBinder: TRACE
+spring:
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+logging:
+  level:
+    org:
+      hibernate:
+        type: DEBUG
