--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'de.akra'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '17'
 
 repositories {
@@ -27,3 +27,21 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+task buildFrontend(type: Exec) {
+	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+		throw new GradleException('Sorry, automatic bundling is not supported on Windows')
+	} else {
+		def resDir = '../server/src/main/resources/static/'
+		commandLine 'mkdir', '-p', resDir
+		commandLine 'sh', '-c', 'cd ../client && npm run-script build'
+		// cp -r dist/corona-school-reporting-client/* ${resDir}
+		copy {
+			from '../client/dist/corona-school-reporting-client/'
+			into resDir
+		}
+	}
+}
+
+build.dependsOn buildFrontend
+bootJar.dependsOn buildFrontend
