--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -25,12 +25,14 @@ jobs:
         distribution: 'temurin' # Formerly "Adopt OpenJDK"
 
     - name: Use Node 12.x
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: '16.x'
+        cache: 'npm'
+        cache-dependency-path: client/package-lock.json
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       working-directory: client
 
     - name: Setup Gradle
