--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -24,14 +24,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin' # Formerly "Adopt OpenJDK"
 
-    - name: Use Node 12.x
+    - name: Set up node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16.x'
         cache: 'npm'
         cache-dependency-path: client/package-lock.json
 
-    - name: Install dependencies
+    - name: Install node.js dependencies
       run: npm install
       working-directory: client
 
