--- a/server/build.gradle
+++ b/server/build.gradle
@@ -15,13 +15,21 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
 
+    // Provides hot reload during development
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    runtimeOnly 'com.h2database:h2'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Used to generate sort-of-valid looking data to play around
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+
+    // Parsing CSV for batch uploads as its the easiest way to get data
+    // out of Excel sheets
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.13.1'
+
+    // We use a H2 database to make deployments as simple as possible
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
