--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'de.akra'
-version = '0.0.2'
+version = '0.0.3'
 sourceCompatibility = '17'
 
 repositories {
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.session:spring-session:1.3.5.RELEASE'
 
     // Provides hot reload during development
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
