--- a/server/application.yml
+++ b/server/application.yml
@@ -12,3 +12,18 @@ app:
     - name: "analyst"
       password: "pass"
       roles: [ "ANALYST" ]
+
+spring:
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: DEBUG
+      springframework:
+        security: DEBUG
