--- a/server/application.yml
+++ b/server/application.yml
@@ -13,17 +13,17 @@ app:
       password: "pass"
       roles: [ "ANALYST" ]
 
-spring:
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-
-logging:
-  level:
-    org:
-      hibernate:
-        type: DEBUG
-      springframework:
-        security: DEBUG
+#spring:
+#  jpa:
+#    properties:
+#      hibernate:
+#        show_sql: true
+#        format_sql: true
+#
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        type: DEBUG
+#      springframework:
+#        security: DEBUG
